feat: upgrade tailwind to v4 and initialize heroui

--- a/.gitattributes
+++ b/.gitattributes
@@ -16,7 +16,7 @@
 *.gitignore text eol=lf
 
 # Treat other files as text by default
-* text=auto
+* text=auto eol=lf
 
 # Prevent binary files from being modified
 *.png    binary
