--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@heroui/react": "^2.8.0-beta.13",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
