--- a/package.json
+++ b/package.json
@@ -14,19 +14,29 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@heroui/react": "^2.8.0-beta.13",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@next/mdx": "^15.3.5",
+    "@types/mdx": "^2.0.13",
     "framer-motion": "^12.23.0",
-    "lucide-react": "^0.525.0",
+    "fs": "^0.0.1-security",
     "next": "15.3.5",
+    "next-mdx-remote": "^5.0.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
