--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@mui/material": "^7.2.0",
     "@next/mdx": "^15.3.5",
     "@types/mdx": "^2.0.13",
+    "browserslist": "^4.25.1",
     "framer-motion": "^12.23.0",
     "fs": "^0.0.1-security",
     "next": "15.3.5",
     "next-mdx-remote": "^5.0.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
