build: fix build

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     },
     "linux": {
       "target": "AppImage"
+    },
+    "publish": {
+      "provider": "github"
     }
   },
   "dependencies": {
