--- a/.github/workflows/release-desktop.yml
+++ b/.github/workflows/release-desktop.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest  
 
     steps:
       - name: Checkout code
@@ -38,6 +38,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.release.outputs.upload_url }}
-          asset_path: ./dist/CodeAnchorTechDocs.exe
-          asset_name: CodeAnchorTechDocs.exe
+          asset_path: ./dist/CodeAnchorTechDocs Setup 0.1.0.exe
+          asset_name: CodeAnchorTechDocs Setup 0.1.0.exe
           asset_content_type: application/octet-stream
